opam-version: "1.2"
name: "iplogic"
authors: ["Petter A. Urkedal"]
maintainer: "paurkedal@gmail.com"
homepage: "https://github.com/paurkedal/iplogic/"
bug-reports: "https://github.com/paurkedal/iplogic/issues"
dev-repo: "https://github.com/paurkedal/iplogic.git"
license: "GPL-3"

build: [["jbuilder" "build" "-p" name "-j" jobs]]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]

depends: [
  "bitpath"
  "jbuilder" {build}
  "prime"
  "re"
]
available: [ocaml-version >= "4.03.0"]
