opam-version: "2.0"
name: "iplogic"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "GPL-3"
homepage: "https://github.com/paurkedal/iplogic/"
bug-reports: "https://github.com/paurkedal/iplogic/issues"
depends: [
  "ocaml" {>= "4.03.0"}
  "bitpath"
  "jbuilder" {build}
  "prime"
  "re"
]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
  ["jbuilder" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/paurkedal/iplogic.git"
